[package]
name = "pump-forking-meteora-sc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_forking_meteora_sc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

#[dependencies]
#anchor-lang = {version = "0.29.0",  features = ["init-if-needed"] }
#anchor-spl = "0.29.0"
#dlmm = { git = "https://github.com/MeteoraAg/dlmm-sdk/", package = "lb_clmm", rev = "fb350c54ab1d023dc0819d1c4d89e882fabdbf75", features = [
#    "cpi",
#] }
#num_enum = "0.7.1"
#num_enum_derive = "0.6.1"


[dependencies]
anchor-lang = { version = "0.28.0", features = ["event-cpi", "init-if-needed"] }
anchor-spl = "0.28.0"
uint = "0.8.5"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
dlmm = { git = "https://github.com/MeteoraAg/dlmm-sdk/", package = "lb_clmm", rev = "fb350c54ab1d023dc0819d1c4d89e882fabdbf75", features = [
   "cpi",] }
ruint = "1.3.0"
num-traits = "0.2.16"
num-integer = "0.1.45"
mpl-token-metadata = "3.0.1"
solana-program = "1.16.0"
num_enum = "0.7.1"
ahash = "=0.8.6"

[dev-dependencies]
proptest = "1.2.0"
rand = "0.7.3"
solana-sdk = "1.16.0"
async-trait = "0.1.52"
assert_matches = "1.5.0"
